* replaced day/week/month chips with a more compact selector * fixed a bug that prevented the table to collapse (mobile devices only) * more concise subtitle

--- a/src/app/ui/main-card/main-card.component.scss
+++ b/src/app/ui/main-card/main-card.component.scss
@@ -1,25 +1,8 @@
-.small-chips-main {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
 
-  .small-chips {
-    display: contents !important;
-  }
 
-  .mat-select {
-    margin-left: 10px;
-    width: 60px;
-  }
-
-  mat-chip {
-    min-height: unset;
-  }
-
-  mat-chip:first-child {
-    margin-left: 10px;
-  }
+.mat-select {
+  margin-left: 10px;
+  width: 60px;
 }
 
 mat-select {
